[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/gui/fade_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/visual_env.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/gui/interface.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/bit_potion_ext.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/gui/debug_information.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gui/dialog_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/effects/sand.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/interface/pause/pause_container.png" type="Texture" id=8]
[ext_resource path="res://scripts/gui/pause_container.gd" type="Script" id=9]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeContainer/TopBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeContainer/BottomBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FadeContainer/Text:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -600, 139 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FadeContainer/Text:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadeContainer/TopBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -160 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeContainer/BottomBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 320 ), Vector2( 0, 160 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadeContainer/TopBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -56 ), Vector2( 0, -56 ), Vector2( 0, -160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeContainer/BottomBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 160 ), Vector2( 0, 200 ), Vector2( 0, 200 ), Vector2( 0, 320 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FadeContainer/Text:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -600, 139 ), Vector2( 148, 139 ), Vector2( 138, 139 ), Vector2( 143, 139 ), Vector2( 133, 139 ), Vector2( 143, 139 ), Vector2( 138, 139 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FadeContainer/Text:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 3 )
dialog_scene = ExtResource( 6 )

[node name="Sand" parent="." instance=ExtResource( 7 )]

[node name="FadeContainer" parent="." instance=ExtResource( 1 )]

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 3 )

[node name="VisualEnv" parent="." instance=ExtResource( 2 )]

[node name="DebugInformation" parent="." instance=ExtResource( 5 )]

[node name="PauseContainer" type="Control" parent="."]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.8 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -80.0
margin_right = 144.0
margin_bottom = 80.0
rect_min_size = Vector2( 288, 160 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="TextureRect" parent="PauseContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -80.0
margin_right = 144.0
margin_bottom = 80.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="PauseContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Jogo Pausado"
align = 1
valign = 1

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
